--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -53,16 +53,16 @@
         </ng-container>
 
         <!-- empresaId Column -->
-        <ng-container matColumnDef="empresaId">
+        <!-- <ng-container matColumnDef="empresaId">
             <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
             <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- empresa Column -->
-        <!-- <ng-container matColumnDef="empresa">
+        <ng-container matColumnDef="empresa">
             <th mat-header-cell *matHeaderCellDef>Empresa</th>
             <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
-        </ng-container> -->
+        </ng-container>
 
         <!-- totalLugares Column -->
         <ng-container matColumnDef="totalLugares">
