--- a/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
+++ b/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
@@ -3,61 +3,51 @@
     <mat-card-title>Excluir Equipamento</mat-card-title>
     <form class="formulario">
 
-        <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
-            <mat-label>Id</mat-label>
-            <input type="number" matInput [value]="veiculo.id" name="id" disabled>
-        </mat-form-field> -->
-
         <mat-form-field class="inputPlaca" appearance="outline" color="accent">
-            <mat-label>Placa</mat-label>
-            <input matInput [(ngModel)]="veiculo.placaVeiculo" name="placaVeiculo" disabled>
+            <mat-label>Cód. Equipamento</mat-label>
+            <input matInput [(ngModel)]="equipamento.codEquipamento" name="codEquipamento" disabled>
         </mat-form-field>
 
         <mat-form-field class="inputModelo" appearance="outline" color="accent">
-            <mat-label>Modelo</mat-label>
-            <input matInput [(ngModel)]="veiculo.modeloVeiculo" name="modeloVeiculo" disabled>
+            <mat-label>Desrição</mat-label>
+            <input matInput [(ngModel)]="equipamento.descricaoEquipamento" name="descricaoEquipamento" disabled>
         </mat-form-field>
 
         <mat-form-field class="inputLinha" appearance="outline" color="accent">
-            <mat-label>Nº da Linha</mat-label>
-            <input matInput [(ngModel)]="veiculo.numeroLinha" name="numeroLinha" disabled >
+            <mat-label>Status</mat-label>
+            <input matInput [(ngModel)]="equipamento.statusEquipamento" name="statusEquipamento" disabled> 
         </mat-form-field>
 
-        <!-- <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
+        <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="veiculo.empresaId" name="empresaId" disabled>
+            <input type="number" matInput [(ngModel)]="equipamento.empresaId" name="empresaId" disabled>
         </mat-form-field>
 
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <input matInput [(ngModel)]="veiculo.empresa" name="empresa" disabled>
+            <input matInput [(ngModel)]="equipamento.empresa" name="empresa" disabled>
+        </mat-form-field>
+
+
+        <!-- Só adaptar o dropDown para equipamento -->
+
+        <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
+        <!-- <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
+            <mat-label>Veiculos da empresa</mat-label>
+            <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
+                <option value="" selected></option>
+                <option *ngFor="let veiculo of veiculosEmpresa.content" [value]="veiculo.placaVeiculo">
+                    Placa: {{veiculo.placaVeiculo}} -
+                    Modelo: {{veiculo.modeloVeiculo}} -
+                    Linha: {{veiculo.numeroLinha}} -
+                    EmpresaID: {{veiculo.empresaId}}
+                </option>
+            </select>
         </mat-form-field> -->
-
-        <mat-form-field class="inputTotalLugares" appearance="outline" color="accent">
-            <mat-label>Total de Lugares</mat-label>
-            <input type="number" min="0" matInput [(ngModel)]="veiculo.totalLugares" 
-            name="totalLugares" disabled>
-        </mat-form-field>
-
-        <mat-form-field class="inputLugaresSentados" appearance="outline" color="accent">
-            <mat-label>Lugares Sentados</mat-label>
-            <input type="number" min="0" matInput [(ngModel)]="veiculo.lugaresSentado" 
-            name="lugaresSentado" disabled>
-        </mat-form-field>
-
-        <mat-form-field class="inputLugaresEmPe" appearance="outline" color="accent">
-            <mat-label>Lugares em Pé</mat-label>
-            <input type="number" min="0" matInput [value]="veiculo.lugaresEmPe" name="lugaresEmPe" disabled>
-        </mat-form-field>
-
-        <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
-            <mat-label>Cód. Equipamento</mat-label>
-            <input type="number" matInput [(ngModel)]="veiculo.codEquipamento" name="codEquipamento" disabled >
-        </mat-form-field>
 
     </form>
     <div class="botoes">
-        <button class="botaoSalvar" mat-raised-button (click)="deleteVeiculo()">
+        <button class="botaoSalvar" mat-raised-button (click)="deleteEquipamento()">
             <mat-icon>delete</mat-icon>
             <span class="textButton">Excluir</span>
         </button>
