--- a/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
+++ b/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
@@ -2,7 +2,6 @@
     <div class="botoes">
         <div class="botoes1">
 
-            <!-- <button mat-raised-button (click)="listarTodosUsuarios()"> -->
             <button mat-raised-button (click)="listarTodosEquipamentos()">
                 <mat-icon class="color-icon">list</mat-icon>
                 <span class="textButton"> Listar Equipamentos</span>
@@ -16,7 +15,7 @@
         </div>
         <div class="botoes2">
             <!-- <button mat-raised-button (click)="listarUsuariosFiltro()"> -->
-            <button mat-raised-button (click)="listarVeiculosFiltro()">
+            <button mat-raised-button (click)="listarEquipamentosFiltro()">
                 <mat-icon class="color-icon">search</mat-icon>
                 <span class="textButtonFilter"> Filtrar</span>
             </button>
@@ -27,29 +26,29 @@
         </div>
     </div>
 
-    <table mat-table [dataSource]="veiculosEmpresa.content" class="mat-elevation-z4">
+    <table mat-table [dataSource]="equipamentosEmpresa.content" class="mat-elevation-z4">
         <!-- id Column -->
         <!-- <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>ID</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
         </ng-container> -->
 
-        <!-- placaVeiculo Column -->
-        <ng-container matColumnDef="placaVeiculo">
-            <th mat-header-cell *matHeaderCellDef>Placa</th>
-        <td mat-cell *matCellDef="let row">{{row.placaVeiculo}}</td>
+        <!-- codEquipamento Column -->
+        <ng-container matColumnDef="codEquipamento">
+            <th mat-header-cell *matHeaderCellDef>Cód. Equipamento</th>
+            <td mat-cell *matCellDef="let row">{{row.codEquipamento}}</td>
         </ng-container>
 
-        <!-- modeloVeiculo Column -->
-        <ng-container matColumnDef="modeloVeiculo">
-            <th mat-header-cell *matHeaderCellDef>Modelo</th>
-            <td mat-cell *matCellDef="let row">{{row.modeloVeiculo}}</td>
+        <!-- descricaoEquipamento Column -->
+        <ng-container matColumnDef="descricaoEquipamento">
+            <th mat-header-cell *matHeaderCellDef>Descrição</th>
+            <td mat-cell *matCellDef="let row">{{row.descricaoEquipamento}}</td>
         </ng-container>
 
-        <!-- numeroLinha Column -->
-        <ng-container matColumnDef="numeroLinha">
-            <th mat-header-cell *matHeaderCellDef>Linha</th>
-        <td mat-cell *matCellDef="let row">{{row.numeroLinha}}</td>
+        <!-- statusEquipamento Column -->
+        <ng-container matColumnDef="statusEquipamento">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let row">{{row.statusEquipamento}}</td>
         </ng-container>
 
         <!-- empresaId Column -->
@@ -59,33 +58,9 @@
         </ng-container>
 
         <!-- empresa Column -->
-        <!-- <ng-container matColumnDef="empresa">
+        <ng-container matColumnDef="empresa">
             <th mat-header-cell *matHeaderCellDef>Empresa</th>
             <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
-        </ng-container> -->
-
-        <!-- totalLugares Column -->
-        <ng-container matColumnDef="totalLugares">
-            <th mat-header-cell *matHeaderCellDef>Total de Lugares</th>
-        <td mat-cell *matCellDef="let row">{{row.totalLugares}}</td>
-        </ng-container>
-
-        <!-- lugaresSentados Column -->
-        <ng-container matColumnDef="lugaresSentado">
-            <th mat-header-cell *matHeaderCellDef>Sentados</th>
-        <td mat-cell *matCellDef="let row">{{row.lugaresSentado}}</td>
-        </ng-container>
-
-        <!-- lugaresEmPe Column -->
-        <ng-container matColumnDef="lugaresEmPe">
-            <th mat-header-cell *matHeaderCellDef>Em Pé</th>
-        <td mat-cell *matCellDef="let row">{{row.lugaresEmPe}}</td>
-        </ng-container>
-
-        <!-- codEquipamento Column -->
-        <ng-container matColumnDef="codEquipamento">
-            <th mat-header-cell *matHeaderCellDef>Cód. Equip.</th>
-        <td mat-cell *matCellDef="let row">{{row.codEquipamento}}</td>
         </ng-container>
 
         <!-- Action Column -->
@@ -115,14 +90,13 @@
 
 <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
 <mat-form-field appearance="outline" color="accent">
-    <mat-label>Veiculos de todos usuários</mat-label>
-    <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo" >
+    <mat-label>Equipamentos de todos usuários</mat-label>
+    <select matNativeControl [(ngModel)]="selectedEquipamento" name="equipamento">
         <option value="" selected></option>
-        <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.placaVeiculo">
-            Placa: {{veiculo.placaVeiculo}}    - 
-            Modelo: {{veiculo.modeloVeiculo}}   - 
-            Linha: {{veiculo.numeroLinha}}  - 
-            EmpresaID: {{veiculo.empresaId}}
+        <option *ngFor="let equipamento of equipamentos.content" [value]="equipamento.codEquipamento">
+            {{equipamento.codEquipamento}} -
+            {{equipamento.descricaoEquipamento}} -
+            {{equipamento.statusEquipamento}}
         </option>
     </select>
 </mat-form-field>
