--- a/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
+++ b/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
@@ -46,23 +46,15 @@
             <input type="number" min="0" matInput [value]="veiculo.lugaresEmPe" name="lugaresEmPe" disabled>
         </mat-form-field>
 
-        <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
-            <mat-label>Cód. Equipamento</mat-label>
-            <input type="number" matInput [(ngModel)]="veiculo.codEquipamento" name="codEquipamento">
-        </mat-form-field>
-
-        Só adaptar o dropDown para equipamento
-
         <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
         <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
-            <mat-label>Veiculos da empresa</mat-label>
-            <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
+            <mat-label>Equipamento</mat-label>
+            <select matNativeControl [(ngModel)]="selectedEquipamento" name="equipamento">
                 <option value="" selected></option>
-                <option *ngFor="let veiculo of veiculosEmpresa.content" [value]="veiculo.placaVeiculo">
-                    Placa: {{veiculo.placaVeiculo}} -
-                    Modelo: {{veiculo.modeloVeiculo}} -
-                    Linha: {{veiculo.numeroLinha}} -
-                    EmpresaID: {{veiculo.empresaId}}
+                <option *ngFor="let equipamento of equipamentosEmpresa.content" [value]="equipamento.codEquipamento">
+                    {{equipamento.codEquipamento}}   -
+                    {{equipamento.descricaoEquipamento}}   -
+                    {{equipamento.statusEquipamento}}
                 </option>
             </select>
         </mat-form-field>
