--- a/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
+++ b/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
@@ -89,7 +89,7 @@
 </div>
 
 <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
-<mat-form-field appearance="outline" color="accent">
+<!-- <mat-form-field appearance="outline" color="accent">
     <mat-label>Equipamentos de todos usuários</mat-label>
     <select matNativeControl [(ngModel)]="selectedEquipamento" name="equipamento">
         <option value="" selected></option>
@@ -99,4 +99,4 @@
             {{equipamento.statusEquipamento}}
         </option>
     </select>
-</mat-form-field>
+</mat-form-field> -->
