--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -114,7 +114,7 @@
 </div>
 
 <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
-<mat-form-field appearance="outline" color="accent">
+<!-- <mat-form-field appearance="outline" color="accent">
     <mat-label>Veiculos de todos usuários</mat-label>
     <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo" >
         <option value="" selected></option>
@@ -125,4 +125,4 @@
             EmpresaID: {{veiculo.empresaId}}
         </option>
     </select>
-</mat-form-field>
+</mat-form-field> -->
