--- a/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
+++ b/src/app/components/veiculo/veiculo-create/veiculo-create.component.html
@@ -53,8 +53,8 @@
                 <option value="" selected></option>
                 <option *ngFor="let equipamento of equipamentosEmpresa.content" [value]="equipamento.codEquipamento">
                     {{equipamento.codEquipamento}}   -
-                    {{equipamento.descricaoEquipamento}}   -
-                    {{equipamento.statusEquipamento}}
+                    {{equipamento.descricaoEquipamento}}
+                    <!-- {{equipamento.statusEquipamento}} -->
                 </option>
             </select>
         </mat-form-field>
