--- a/src/app/components/veiculo/veiculo-update/veiculo-update.component.html
+++ b/src/app/components/veiculo/veiculo-update/veiculo-update.component.html
@@ -58,8 +58,8 @@
                 <option value="" selected></option>
                 <option *ngFor="let equipamento of equipamentosEmpresa.content" [value]="equipamento.codEquipamento">
                     {{equipamento.codEquipamento}} -
-                    {{equipamento.descricaoEquipamento}} -
-                    {{equipamento.statusEquipamento}}
+                    {{equipamento.descricaoEquipamento}}
+                    <!-- {{equipamento.statusEquipamento}} -->
                 </option>
             </select>
         </mat-form-field>
