--- a/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
+++ b/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
@@ -51,16 +51,16 @@
             <td mat-cell *matCellDef="let row">{{row.statusEquipamento}}</td>
         </ng-container>
 
-        <!-- empresaId Column -->
+        <!-- empresaId Column
         <ng-container matColumnDef="empresaId">
             <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
             <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
-        </ng-container>
+        </ng-container> -->
 
         <!-- empresa Column -->
         <ng-container matColumnDef="empresa">
             <th mat-header-cell *matHeaderCellDef>Empresa</th>
-            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+            <td mat-cell *matCellDef="let row">{{row.empresa.empresa_nome}}</td>
         </ng-container>
 
         <!-- Action Column -->
