--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.html
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.html
@@ -1,25 +1,25 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <mat-card class="container">
     <mat-card-title>Excluir usuário</mat-card-title>
-    <form class="formulario">
+    <form class="formulario"> -->
         <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
             <mat-label>Id</mat-label>
             <input type="number" matInput [value]="usuario.id" name="id" disabled>
         </mat-form-field> -->
-        <mat-form-field class="inputNome" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputNome" appearance="outline" color="accent">
             <mat-label>Nome (usuário)</mat-label>
             <input matInput [value]="usuario.nome" name="nome" disabled>
-        </mat-form-field>
+        </mat-form-field> -->
         <!-- <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
             <input type="number" matInput [value]="usuario.empresaId" name="empresaId" disabled>
         </mat-form-field> -->
-        <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [value]="usuario.empresa" name="empresa" disabled>
         </mat-form-field>
-    </form>
-    <div class="botoes">
+    </form> -->
+    <!-- <div class="botoes">
         <button class="botaoSalvar" mat-raised-button (click)="deleteUsuario()">
             <mat-icon>delete</mat-icon>
             <span class="textButton">Excluir</span>
@@ -29,4 +29,4 @@
             <span class="textButton">Cancelar</span>
         </button>
     </div>
-</mat-card>
+</mat-card> -->
