--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -52,7 +52,7 @@
     <!-- empresa Column -->
     <ng-container matColumnDef="empresa">
       <th mat-header-cell *matHeaderCellDef>Empresa</th>
-      <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+      <td mat-cell *matCellDef="let row">{{row.empresa.empresa_nome}}</td>
     </ng-container>
 
     <!-- Action Column -->
