--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -61,7 +61,7 @@
         <!-- empresa Column -->
         <ng-container matColumnDef="empresa">
             <th mat-header-cell *matHeaderCellDef>Empresa</th>
-            <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
+            <td mat-cell *matCellDef="let row">{{row.empresa.empresa_nome}}</td>
         </ng-container>
 
         <!-- totalLugares Column -->
