Ajustes Usuário após criação Tabela Empresa

--- a/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
+++ b/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
@@ -20,12 +20,12 @@
 
         <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="equipamento.empresaId" name="empresaId" disabled>
+            <input type="number" matInput [(ngModel)]="equipamento.empresa.id" name="empresaId" disabled>
         </mat-form-field>
 
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <input matInput [(ngModel)]="equipamento.empresa" name="empresa" disabled>
+            <input matInput [(ngModel)]="equipamento.empresa.empresa_nome" name="empresa" disabled>
         </mat-form-field>
 
 
