--- a/src/app/components/equipamento/equipamento-update/equipamento-update.component.html
+++ b/src/app/components/equipamento/equipamento-update/equipamento-update.component.html
@@ -26,7 +26,7 @@
 
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <input matInput [(ngModel)]="equipamento.empresa" name="empresa" disabled>
+            <input matInput [(ngModel)]="equipamento.empresa.empresa_nome" name="empresa" disabled>
         </mat-form-field>
 
 
