--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 <mat-card class="container">
     <mat-card-title>Cadastrar Usuário</mat-card-title>
     <form class="formulario">
@@ -14,7 +14,7 @@
         <mat-form-field class="inputSenha" appearance="outline" color="accent">
             <mat-label>Confirmação Senha</mat-label>
             <input type="password" matInput [(ngModel)]="senhaCheck" name="senhaCheck" required>
-        </mat-form-field> -->
+        </mat-form-field>
         <!-- <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
             <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId" required>
@@ -24,12 +24,12 @@
             <input matInput [(ngModel)]="usuario.empresa" name="empresa" required>
         </mat-form-field> -->
 
-        <!-- <mat-form-field appearance="outline" color="accent">
+        <mat-form-field appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <select [disabled]="inputEmpresa" matNativeControl [(ngModel)]="selectedEmpresa" name="empresa" >
                 <option value="" selected></option>
-                <option *ngFor="let empresa of empresas.content" [value]="empresa">
-                    {{empresa.empresa}}
+                <option *ngFor="let empresa of empresas.content" [value]="empresa.id">
+                    {{empresa.empresa_nome}}
                 </option>
             </select>
         </mat-form-field>
@@ -45,4 +45,4 @@
             <span class="textButton">Cancelar</span>
         </button>
     </div>
-</mat-card> -->
+</mat-card>
