--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -46,7 +46,7 @@
     <!-- empresaId Column -->
     <!-- <ng-container matColumnDef="empresaId">
       <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
-      <td mat-cell *matCellDef="let row">{{row.empresaId}}</td>
+      <td mat-cell *matCellDef="let row">{{row.empresa.id}}</td>
     </ng-container> -->
 
     <!-- empresa Column -->
