--- a/src/app/components/template/menu-button/menu-button.component.html
+++ b/src/app/components/template/menu-button/menu-button.component.html
@@ -12,15 +12,15 @@
         <mat-icon class="color-icon">account_circle</mat-icon>
         <span class="text-menu">Manter Usuários</span>
     </button>
-    <button mat-menu-item (click)="navigateToManterVeiculos()">
+    <button [disabled]="adminButtons" mat-menu-item (click)="navigateToManterVeiculos()">
         <mat-icon class="color-icon">commute</mat-icon>
         <span class="text-menu">Manter Veículos</span>
     </button>
-    <button mat-menu-item (click)="navigateToManterEquipamentos()">
+    <button [disabled]="adminButtons" mat-menu-item (click)="navigateToManterEquipamentos()">
         <mat-icon class="color-icon">developer_board</mat-icon>
         <span class="text-menu">Manter Equipamentos</span>
     </button>
-    <button mat-menu-item (click)="navigateToMostrarNivelLotacao()">
+    <button [disabled]="adminButtons" mat-menu-item (click)="navigateToMostrarNivelLotacao()">
         <mat-icon class="color-icon">visibility</mat-icon>
         <span class="text-menu">Mostrar Nível de Lotação</span>
     </button>
