--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -14,19 +14,19 @@
         </button>
     </mat-grid-tile>
     <mat-grid-tile>
-        <button mat-menu-item (click)="navigateToManterVeiculos()">
+        <button [disabled]="adminButtons" mat-menu-item (click)="navigateToManterVeiculos()">
             <mat-icon class="color-icon">commute</mat-icon>
             <span class="text-menu">Manter Veículos</span>
         </button>
     </mat-grid-tile>
     <mat-grid-tile>
-        <button mat-menu-item (click)="navigateToManterEquipamentos()">
+        <button [disabled]="adminButtons" mat-menu-item (click)="navigateToManterEquipamentos()">
             <mat-icon class="color-icon">developer_board</mat-icon>
             <span class="text-menu">Manter Equipamentos</span>
         </button>
     </mat-grid-tile>
     <mat-grid-tile>
-        <button mat-menu-item (click)="navigateToMostrarNivelLotacao()">
+        <button [disabled]="adminButtons" mat-menu-item (click)="navigateToMostrarNivelLotacao()" >
             <mat-icon class="color-icon">visibility</mat-icon>
             <span class="text-menu">Mostrar Nível de Lotação</span>
         </button>
