--- a/src/app/components/veiculo/veiculo-delete/veiculo-delete.component.html
+++ b/src/app/components/veiculo/veiculo-delete/veiculo-delete.component.html
@@ -52,7 +52,7 @@
 
         <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
             <mat-label>Cód. Equipamento</mat-label>
-            <input matInput [(ngModel)]="veiculo.codEquipamento" name="codEquipamento" disabled >
+            <input matInput [(ngModel)]="veiculo.equipamento.codEquipamento" name="codEquipamento" disabled >
         </mat-form-field>
 
     </form>
