--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -85,9 +85,9 @@
         <!-- codEquipamento Column -->
         <ng-container matColumnDef="codEquipamento">
             <th mat-header-cell *matHeaderCellDef>Cód. Equip.</th>
-        <td mat-cell *matCellDef="let row">{{row.codEquipamento}}</td>
+        <td mat-cell *matCellDef="let row">{{row.equipamento.codEquipamento}}</td>
         </ng-container>
-
+co
         <!-- Action Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Ações</th>
