Filtros do Histórico Ok

--- a/src/app/components/template/menu-button/menu-button.component.html
+++ b/src/app/components/template/menu-button/menu-button.component.html
@@ -22,7 +22,7 @@
     </button>
     <button [disabled]="adminButtons" mat-menu-item (click)="navigateToMostrarNivelLotacao()">
         <mat-icon class="color-icon">visibility</mat-icon>
-        <span class="text-menu">Mostrar Nível de Lotação</span>
+        <span class="text-menu">Históricos de Lotação</span>
     </button>
     <button mat-menu-item (click)="navigateToLogin()">
         <mat-icon class="color-icon">login</mat-icon>
