--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -28,7 +28,7 @@
     <mat-grid-tile>
         <button [disabled]="adminButtons" mat-menu-item (click)="navigateToMostrarNivelLotacao()" >
             <mat-icon class="color-icon">visibility</mat-icon>
-            <span class="text-menu">Mostrar Nível de Lotação</span>
+            <span class="text-menu">Históricos de Lotação</span>
         </button>
     </mat-grid-tile>
 </mat-grid-list>
