--- a/src/app/views/mostrar-nivel-lotacao/mostrar-nivel-lotacao.component.html
+++ b/src/app/views/mostrar-nivel-lotacao/mostrar-nivel-lotacao.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <div class="container">
-    <h1 class="titulo"> MOSTRAR NÍVEL DE LOTAÇÃO</h1>
+    <h1 class="titulo"> HISTÓRICOS DE LOTAÇÃO</h1>
 </div>
 <app-historico-read></app-historico-read>
