--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -14,10 +14,17 @@
 
         </div>
         <div class="botoes2">
-            <button mat-raised-button (click)="listarTodosHistoricosPorVeiculo()">
+            <button mat-raised-button (click)="listarTodosHistoricosComFiltros()">
                 <mat-icon class="color-icon">search</mat-icon>
                 <span class="textButtonFilter"> Filtrar</span>
             </button>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Escolha uma data</mat-label>
+                <input matInput [matDatepicker]="picker" [(ngModel)]="selectedData">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
 
             <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
                 <mat-label>Veiculo</mat-label>
@@ -58,7 +65,7 @@
         <!-- Equipamento Column -->
         <ng-container matColumnDef="equipamento">
             <th mat-header-cell *matHeaderCellDef>Equipamento</th>
-        <td mat-cell *matCellDef="let row">{{row.equipamento.codEquipamento}}</td>
+        <td mat-cell *matCellDef="let row">{{row.veiculo.equipamento.codEquipamento}}</td>
         </ng-container>
 
         <!-- qtdPassageiros Column -->
