Filtros do Histórico Ok

--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -19,7 +19,7 @@
                 <span class="textButtonFilter"> Filtrar</span>
             </button>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline" color="accent">
                 <mat-label>Escolha uma data</mat-label>
                 <input matInput [matDatepicker]="picker" [(ngModel)]="selectedData">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
