--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -7,10 +7,10 @@
                 <span class="textButton"> Listar Históricos</span>
             </button>
 
-            <!-- <button mat-raised-button (click)="navigateToNovoVeiculo()">
+            <button mat-raised-button (click)="CriaPDF()">
                 <mat-icon class="color-icon">commute</mat-icon>
-                <span class="textButton"> Novo Veículo</span>
-            </button> -->
+                <span class="textButton"> Criar PDF</span>
+            </button>
 
         </div>
         <div class="botoes2">
@@ -24,14 +24,14 @@
                 <input matInput [matDatepicker]="picker" [(ngModel)]="selectedData">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
+            </mat-form-field>
 
             <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
                 <mat-label>Veiculo</mat-label>
                 <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
                     <option value="" selected></option>
                     <option *ngFor="let veiculo of veiculosEmpresa.content" [value]="veiculo.placaVeiculo">
-                        {{veiculo.placaVeiculo}} - {{veiculo.modeloVeiculo}} 
+                        {{veiculo.placaVeiculo}} - {{veiculo.modeloVeiculo}}
                     </option>
                 </select>
             </mat-form-field>
@@ -43,65 +43,68 @@
         </div>
     </div>
 
-    <table mat-table [dataSource]="historicosEmpresa.content" class="mat-elevation-z4">
-        <!-- id Column -->
-        <!-- <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>ID</th>
-            <td mat-cell *matCellDef="let row">{{row.id}}</td>
-        </ng-container> -->
+    <div id="tabela">
+        <table mat-table [dataSource]="historicosEmpresa.content" class="mat-elevation-z4">
+            <!-- id Column -->
+            <!-- <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>ID</th>
+                <td mat-cell *matCellDef="let row">{{row.id}}</td>
+            </ng-container> -->
 
-        <!-- datahora Column -->
-        <ng-container matColumnDef="datahora">
-            <th mat-header-cell *matHeaderCellDef>Data/Hora</th>
-        <td mat-cell *matCellDef="let row">{{row.datahora}}</td>
-        </ng-container>
+            <!-- datahora Column -->
+            <ng-container matColumnDef="datahora">
+                <th mat-header-cell *matHeaderCellDef>Data/Hora</th>
+                <td mat-cell *matCellDef="let row">{{row.datahora}}</td>
+            </ng-container>
 
-        <!-- Veiculo Column -->
-        <ng-container matColumnDef="veiculo">
-            <th mat-header-cell *matHeaderCellDef>Veículo</th>
-            <td mat-cell *matCellDef="let row">{{row.veiculo.placaVeiculo}} - {{row.veiculo.modeloVeiculo}}</td>
-        </ng-container>
+            <!-- Veiculo Column -->
+            <ng-container matColumnDef="veiculo">
+                <th mat-header-cell *matHeaderCellDef>Veículo</th>
+                <td mat-cell *matCellDef="let row">{{row.veiculo.placaVeiculo}} - {{row.veiculo.modeloVeiculo}}</td>
+            </ng-container>
 
-        <!-- Equipamento Column -->
-        <ng-container matColumnDef="equipamento">
-            <th mat-header-cell *matHeaderCellDef>Equipamento</th>
-        <td mat-cell *matCellDef="let row">{{row.veiculo.equipamento.codEquipamento}}</td>
-        </ng-container>
+            <!-- Equipamento Column -->
+            <ng-container matColumnDef="equipamento">
+                <th mat-header-cell *matHeaderCellDef>Equipamento</th>
+                <td mat-cell *matCellDef="let row">{{row.veiculo.equipamento.codEquipamento}}</td>
+            </ng-container>
 
-        <!-- qtdPassageiros Column -->
-        <ng-container matColumnDef="qtdPassageiros">
-            <th mat-header-cell *matHeaderCellDef>QTD Passageiros</th>
-            <td mat-cell *matCellDef="let row">{{row.qtdPassageiros}}</td>
-        </ng-container>
+            <!-- qtdPassageiros Column -->
+            <ng-container matColumnDef="qtdPassageiros">
+                <th mat-header-cell *matHeaderCellDef>QTD Passageiros</th>
+                <td mat-cell *matCellDef="let row">{{row.qtdPassageiros}}</td>
+            </ng-container>
 
-        <!-- status Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let row">{{row.status}}</td>
-        </ng-container>
+            <!-- status Column -->
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef>Status</th>
+                <td mat-cell *matCellDef="let row">{{row.status}}</td>
+            </ng-container>
 
-        <!-- Action Column -->
-        <!-- <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>Ações</th>
-            <td mat-cell *matCellDef="let row">
-                <a routerLink="/veiculos/update/{{ row.id }}" class="update">
-                    <i class="material-icons">
-                        edit
-                    </i>
-                </a>
-                <a routerLink="/veiculos/delete/{{ row.id }}" class="delete">
-                    <i class="material-icons">
-                        delete
-                    </i>
-                </a>
-            </td>
-        </ng-container> -->
+            <!-- Action Column -->
+            <!-- <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Ações</th>
+                <td mat-cell *matCellDef="let row">
+                    <a routerLink="/veiculos/update/{{ row.id }}" class="update">
+                        <i class="material-icons">
+                            edit
+                        </i>
+                    </a>
+                    <a routerLink="/veiculos/delete/{{ row.id }}" class="delete">
+                        <i class="material-icons">
+                            delete
+                        </i>
+                    </a>
+                </td>
+            </ng-container> -->
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage"
-        [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage"
+            [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
+    </div>
+
 
 </div>
 
