criação Tela Mostrar Nivel Lotacao

--- a/src/app/components/equipamento/equipamento-create/equipamento-create.component.html
+++ b/src/app/components/equipamento/equipamento-create/equipamento-create.component.html
@@ -19,10 +19,10 @@
             <input matInput [(ngModel)]="equipamento.statusEquipamento" name="statusEquipamento" disabled> 
         </mat-form-field>
 
-        <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
+        <!-- <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
             <input type="number" matInput [(ngModel)]="equipamento.empresa.id" name="empresaId" disabled>
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
