--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -12,6 +12,11 @@
                 <span class="textButton"> Criar PDF</span>
             </button>
 
+            <button mat-raised-button (click)="nivelDeLotacao()">
+                <mat-icon class="color-icon">visibility</mat-icon>
+                <span class="textButton"> Nível Lotação</span>
+            </button>
+
         </div>
         <div class="botoes2">
             <button mat-raised-button (click)="listarTodosHistoricosComFiltros()">
@@ -30,7 +35,7 @@
                 <mat-label>Veiculo</mat-label>
                 <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
                     <option value="" selected></option>
-                    <option *ngFor="let veiculo of veiculosEmpresa.content" [value]="veiculo.placaVeiculo">
+                    <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.placaVeiculo">
                         {{veiculo.placaVeiculo}} - {{veiculo.modeloVeiculo}}
                     </option>
                 </select>
@@ -66,7 +71,7 @@
             <!-- Equipamento Column -->
             <ng-container matColumnDef="equipamento">
                 <th mat-header-cell *matHeaderCellDef>Equipamento</th>
-                <td mat-cell *matCellDef="let row">{{row.veiculo.equipamento.codEquipamento}}</td>
+                <td mat-cell *matCellDef="let row">{{row.equipamento.codEquipamento}}</td>
             </ng-container>
 
             <!-- qtdPassageiros Column -->
