--- a/src/app/views/status-lotacao/status-lotacao.component.html
+++ b/src/app/views/status-lotacao/status-lotacao.component.html
@@ -2,4 +2,4 @@
 <div class="container">
     <h1 class="titulo"> MOSTRAR NÍVEL DE LOTAÇÃO</h1>
 </div>
-<app-status-lotacao></app-status-lotacao>
+<app-nivel-lotacao></app-nivel-lotacao>
