--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.css
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.css
@@ -1,19 +1,66 @@
-table {
-    width: 100%;
-    padding: 5px;
-    
+.container{
+   display: flex;
+   flex-direction: column;
 }
 
-.update {
-    margin-right: 10px;
+
+.filtro{
+    display: flex;
+    justify-content: center;
 }
 
-.update > i {
-    color: #d9cd26;
+.imagemOnibus {
+    float: left;
+    position: relative;
 }
 
-.delete > i {
-    color: #e35e6b;
+.textoLinha{
+   position: absolute;
+   margin-left: 220px;
+   margin-top: 13px;
+   top: 0;
+   left: 0;   
+   color: #fff;
+}
+
+.textoPlaca{
+   position: absolute;
+   margin-left: 155px;
+   margin-top: 329px;
+   top: 0;
+   left: 0;   
+   color: #fff;
+}
+
+.textoModelo{
+   position: absolute;
+   margin-left: 55px;
+   margin-top: 225px;
+   top: 0;
+   left: 0;   
+   color: #fff;
+   size: 12px;
+}
+
+.inferior {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    margin-top: 30px;
+}
+
+.busao{
+    display: flex;
+    justify-content: flex-end;
+    width: 55%;
+}
+
+.informacaoBusao {
+    display: flex;
+    flex-direction: column;
+    color: aliceblue;
+    width: 45%;
+    margin-left: 20px;
 }
 
 button {
@@ -44,7 +91,7 @@ mat-form-field.mat-form-field {
     justify-content: center;
     font-size: 12px;
     color: white;
-    width: 30%;
+    width: 35%;
     height: 10px;
     padding: 5px;
     margin-right: 5px;
