--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -12,7 +12,7 @@
                 <span class="textButton"> Criar PDF</span>
             </button>
 
-            <button mat-raised-button (click)="nivelDeLotacao()">
+            <button class="botaoNivelLotacao" mat-raised-button (click)="nivelDeLotacao()">
                 <mat-icon class="color-icon">visibility</mat-icon>
                 <span class="textButton"> Nível Lotação</span>
             </button>
