--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.css
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.css
@@ -3,10 +3,19 @@
    flex-direction: column;
 }
 
-
 .filtro{
     display: flex;
     justify-content: center;
+}
+
+.texto{
+    text-align: center;
+    font-size:  14px;
+}
+.texto2{
+    text-align: center;
+    font-size:  16px;
+    color: black;
 }
 
 .imagemOnibus {
@@ -42,25 +51,46 @@
    size: 12px;
 }
 
+.textoQtdPassageiros{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position: absolute;
+    margin-top: 70px;
+    top: 0;
+    left: 0;
+    color: black;
+}
+
+.textoStatus{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position: absolute;
+    margin-top: 120px;
+    top: 0;
+    left: 0;
+    color: black;    
+}
+
 .inferior {
     display: flex;
     flex-direction: row;
     align-content: center;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .busao{
     display: flex;
-    justify-content: flex-end;
-    width: 55%;
+    justify-content: center;
+    width: 100%;
 }
 
 .informacaoBusao {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     color: aliceblue;
-    width: 45%;
-    margin-left: 20px;
+    width: 100%;
 }
 
 button {
@@ -91,11 +121,12 @@ mat-form-field.mat-form-field {
     justify-content: center;
     font-size: 12px;
     color: white;
-    width: 35%;
+    width: 15%;
     height: 10px;
     padding: 5px;
     margin-right: 5px;
 }
+
 
 /* cor de fundo e texto do autocomplete do input */
 input:-webkit-autofill, input:-webkit-autofill:focus{
