--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.html
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-
     <div class="superior">
         <div class="filtro">
-            <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
-                <mat-label>Veiculo</mat-label>
-                <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
+            <mat-form-field class="inputCodEquipamento" appearance="legacy" color="accent">
+                <mat-label class="texto">Veiculo</mat-label>
+                <select class="texto" matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
                     <option value="" selected></option>
                     <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.id">
                         {{veiculo.placaVeiculo}} - {{veiculo.modeloVeiculo}}
@@ -18,9 +17,28 @@
             </button>
         </div>
     </div>
+    <div>
+        <div class="informacaoBusao">
+            <mat-form-field appearance="outline" color="accent">
+                <mat-label class="texto">Data/Hora</mat-label>
+                <input class="texto" matInput [(ngModel)]="historico.datahora" readonly>
+            </mat-form-field>
+            <mat-form-field appearance="outline" color="accent">
+                <mat-label class="texto">Equipamento instalado</mat-label>
+                <input class="texto" matInput [(ngModel)]="equipamentoInstalado" readonly>
+            </mat-form-field>
+            <mat-form-field appearance="outline" color="accent">
+                <mat-label class="texto">Nº de Passageiros</mat-label>
+                <input class="texto" matInput [(ngModel)]="historico.qtdPassageiros" readonly>
+            </mat-form-field>
+            <mat-form-field appearance="outline" color="accent">
+                <mat-label class="texto">Status</mat-label>
+                <input class="texto" matInput [(ngModel)]="historico.status" readonly>
+            </mat-form-field>
+        </div>
+    </div>
 
     <div class="inferior">
-
         <div class="busao">
             <div class="imagemOnibus">
                 <img src="..\assets\{{onibusColor}}">
@@ -34,21 +52,19 @@
                 <div class="textoModelo">
                     <h2>{{historico.veiculo.modeloVeiculo}}</h2>
                 </div>
+                <!-- <div class="textoQtdPassageiros">
+                    <mat-form-field style="width: 50%; font-weight: 500;" appearance="outline">
+                        <mat-label class="texto2">Nº de Passageiros</mat-label>
+                        <input class="texto2" matInput [(ngModel)]="historico.qtdPassageiros" readonly>
+                    </mat-form-field>
+                </div>
+                <div class="textoStatus">
+                    <mat-form-field style="width: 50%; font-weight: 500;" appearance="outline">
+                        <mat-label class="texto2">Status</mat-label>
+                        <input class="texto2" matInput [(ngModel)]="historico.status" readonly>
+                    </mat-form-field>
+                </div> -->
             </div>
         </div>
-
-        <div class="informacaoBusao">
-            <p style="color: #e9d207;">Último registro do histórico do veículo</p>
-            <p> ID: <span style="color: #B6D7A8;">{{historico.id}}</span></p>
-            <p> Data/Hora: <span style="color: #B6D7A8;">{{historico.datahora}}</span></p>
-            <p> Veículo: <span style="color: #B6D7A8;">{{historico.veiculo.placaVeiculo}} -
-                    {{historico.veiculo.modeloVeiculo}}</span></p>
-            <p> Equipamento: <span style="color: #B6D7A8;">{{historico.equipamento.codEquipamento}}</span></p>
-            <p> QTD Passageiros: <span style="color: #B6D7A8;">{{historico.qtdPassageiros}}</span></p>
-            <p> Status: <span style="color: #B6D7A8;">{{historico.status}}</span></p>
-            <p> Placa do Veiculo: <span style="color: #B6D7A8;">{{historico.veiculo.placaVeiculo}}</span></p>
-            <p> Linha: <span style="color: #B6D7A8;">{{historico.veiculo.numeroLinha}}</span></p>
-        </div>
-
     </div>
 </div>
