Fix Niveis de Lotação e remoção de Assentos disponíveis

--- a/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
+++ b/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
@@ -48,12 +48,14 @@
     </form>
     <div class="botoes">
         <button class="botaoSalvar" mat-raised-button (click)="deleteEquipamento()">
-            <mat-icon>delete</mat-icon>
+            <mat-icon fontSet="material-icons-outlined">delete</mat-icon>
             <span class="textButton">Excluir</span>
         </button>
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
-            <mat-icon>close</mat-icon>
+            <mat-icon fontSet="material-icons-outlined">close</mat-icon>
             <span class="textButton">Cancelar</span>
         </button>
     </div>
 </mat-card>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
