--- a/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
+++ b/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
@@ -88,15 +88,4 @@
 
 </div>
 
-<!-- Exemplo de como inserir conteudo do banco na DropDown List -->
-<!-- <mat-form-field appearance="outline" color="accent">
-    <mat-label>Equipamentos de todos usuários</mat-label>
-    <select matNativeControl [(ngModel)]="selectedEquipamento" name="equipamento">
-        <option value="" selected></option>
-        <option *ngFor="let equipamento of equipamentos.content" [value]="equipamento.codEquipamento">
-            {{equipamento.codEquipamento}} -
-            {{equipamento.descricaoEquipamento}} -
-            {{equipamento.statusEquipamento}}
-        </option>
-    </select>
-</mat-form-field> -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
