--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.html
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.html
@@ -10,10 +10,10 @@
                     </option>
                 </select>
             </mat-form-field>
-
+            
             <button mat-raised-button (click)="listarHistorico()">
-                <mat-icon class="color-icon">visibility</mat-icon>
-                <span class="textButton"> Mostrar Nivel</span>
+                <mat-icon fontSet="material-icons-outlined">analytics</mat-icon>
+                <span class="textButton"> Mostrar Nivel de Lotação</span>
             </button>
         </div>
     </div>
@@ -70,3 +70,5 @@
         </div>
     </div>
 </div>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
