--- a/src/app/components/historico/historico-read/historico-read.component.css
+++ b/src/app/components/historico/historico-read/historico-read.component.css
@@ -53,6 +53,21 @@ mat-form-field.mat-form-field {
     margin-right: 5px;
 }
 
+select {
+    color: white;
+}
+
+select:hover {
+    background-color: #666;
+    color: white;
+}
+
+select option {
+    color: #B6D7A8;
+    background-color: #333;
+}
+
+
 /* cor de fundo e texto do autocomplete do input */
 input:-webkit-autofill, input:-webkit-autofill:focus{
     -webkit-text-fill-color: white;
