--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -8,13 +8,13 @@
             </button>
 
             <button mat-raised-button (click)="CriaPDF()">
-                <mat-icon class="color-icon">commute</mat-icon>
+                <mat-icon fontSet="material-icons-outlined">picture_as_pdf</mat-icon>
                 <span class="textButton"> Criar PDF</span>
             </button>
 
             <button class="botaoNivelLotacao" mat-raised-button (click)="nivelDeLotacao()">
-                <mat-icon class="color-icon">visibility</mat-icon>
-                <span class="textButton"> Nível Lotação</span>
+                <mat-icon fontSet="material-icons-outlined">visibility</mat-icon>
+                <span class="textButton"> Nível de Lotação</span>
             </button>
 
         </div>
@@ -40,11 +40,6 @@
                     </option>
                 </select>
             </mat-form-field>
-
-            <!-- <mat-form-field appearance="outline" color="accent">
-                <mat-label>Filtrar por placa</mat-label>
-                <input matInput [(ngModel)]="filter" name="filter">
-            </mat-form-field> -->
         </div>
     </div>
 
@@ -86,43 +81,12 @@
                 <td mat-cell *matCellDef="let row">{{row.status}}</td>
             </ng-container>
 
-            <!-- Action Column -->
-            <!-- <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>Ações</th>
-                <td mat-cell *matCellDef="let row">
-                    <a routerLink="/veiculos/update/{{ row.id }}" class="update">
-                        <i class="material-icons">
-                            edit
-                        </i>
-                    </a>
-                    <a routerLink="/veiculos/delete/{{ row.id }}" class="delete">
-                        <i class="material-icons">
-                            delete
-                        </i>
-                    </a>
-                </td>
-            </ng-container> -->
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
         <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage"
             [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
     </div>
-
-
 </div>
 
-<!-- Exemplo de como inserir conteudo do banco na DropDown List -->
-<!-- <mat-form-field appearance="outline" color="accent">
-    <mat-label>Veiculos de todos usuários</mat-label>
-    <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo" >
-        <option value="" selected></option>
-        <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.placaVeiculo">
-            Placa: {{veiculo.placaVeiculo}}    - 
-            Modelo: {{veiculo.modeloVeiculo}}   - 
-            Linha: {{veiculo.numeroLinha}}  - 
-            EmpresaID: {{veiculo.empresaId}}
-        </option>
-    </select>
-</mat-form-field> -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
