--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.css
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.css
@@ -119,7 +119,6 @@ button {
 .botoes1 {
     display: flex;
     width: 50%;
-    /* background-color: yellow; */
 }
 
 .botoes2 {
@@ -136,6 +135,21 @@ mat-form-field.mat-form-field {
     height: 10px;
     padding: 5px;
     margin-right: 5px;
+}
+
+
+select {
+    color: white;
+}
+
+select:hover {
+    background-color: #666;
+    color: white;
+}
+
+select option {
+    color: #B6D7A8;
+    background-color: #333;
 }
 
 
