--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -37,12 +37,14 @@
     </form>
     <div class="botoes">
         <button class="botaoSalvar" mat-raised-button (click)="createUsuario()">
-            <mat-icon>save</mat-icon>
+            <mat-icon fontSet="material-icons-outlined">save</mat-icon>
             <span class="textButton">Salvar</span>
         </button>
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
-            <mat-icon>close</mat-icon>
+            <mat-icon fontSet="material-icons-outlined">close</mat-icon>
             <span class="textButton">Cancelar</span>
         </button>
     </div>
 </mat-card>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
