--- a/src/app/views/status-lotacao/status-lotacao.component.html
+++ b/src/app/views/status-lotacao/status-lotacao.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <div class="container">
-    <h1 class="titulo"> MOSTRAR NÍVEL DE LOTAÇÃO</h1>
+    <h1 class="titulo">NÍVEL DE LOTAÇÃO</h1>
 </div>
 <app-nivel-lotacao></app-nivel-lotacao>
